--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "debug": "nodemon --inspect ./bin/www"
+    "debug": "nodemon --inspect ./bin/www",
+    "db:create": "createdb --echo aae_dev",
+    "db:drop": "dropdb --echo aae_dev"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
